--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="search">Search</string>
+    <string name="cancel">Cancel</string>
 </resources>
